<resources>
    <string name="app_name">RESONA</string>

    <!-- mypage -->
    <string name="mypage_nickname_placeholder">닉네임</string>
    <string name="mypage_menu_my_posts">나의 추천글 보기</string>
    <string name="mypage_menu_saved_posts">저장한 추천글 보기</string>
    <string name="mypage_logout">로그아웃</string>

    <!-- onboarding -->
    <string name="onboarding_nickname">닉네임</string>
    <string name="onboarding_placeholder">직접 작성하기</string>
    <string name="onboarding_nickname_valid">20글자까지 입력 가능합니다.</string>
    <string name="onboarding_category_question">Q. 어떤 카테고리의 노래를 추천 받고 싶나요?</string>
    <string name="onboarding_scene_question">Q. 어떤 상황에 들을 노래를 추천 받고 싶나요?</string>
    <string name="onboarding_category_button1">사랑/설렘</string>
    <string name="onboarding_category_button2">이별/슬픔</string>
    <string name="onboarding_category_button3">위로/응원</string>
    <string name="onboarding_category_button4">신남/에너지</string>
    <string name="onboarding_category_button5">그리움/추억</string>
    <string name="onboarding_category_button6">일상/여유</string>
    <string name="onboarding_scene_button1">출퇴근길</string>
    <string name="onboarding_scene_button2">비오는 날</string>
    <string name="onboarding_scene_button3">새벽 감성</string>
    <string name="onboarding_scene_button4">산책/여행</string>
    <string name="onboarding_scene_button5">집중/작업</string>
    <string name="onboarding_scene_button6">운동/활동</string>

    <!-- loading -->
    <!-- post -->
    <string name="post_category_question">Q. 어떤 카테고리의 노래인가요?</string>
    <string name="post_scene_question">Q. 어떤 상황에 들으셨나요?</string>

    <!-- category -->
    <string name="song_category_button1">사랑/설렘</string>
    <string name="song_category_button2">이별/슬픔</string>
    <string name="song_category_button3">위로/응원</string>
    <string name="song_category_button4">신남/에너지</string>
    <string name="song_category_button5">그리움/추억</string>
    <string name="song_category_button6">일상/여유</string>

    <!-- scene -->
    <string name="song_scene_button1">출퇴근길</string>
    <string name="song_scene_button2">비오는 날</string>
    <string name="song_scene_button3">새벽 감성</string>
    <string name="song_scene_button4">산책/여행</string>
    <string name="song_scene_button5">집중/작업</string>
    <string name="song_scene_button6">운동/활동</string>
  
    <string name="loading_message">로그인 중입니다…</string>
    <string name="loading_onboarding">노래 추천 중...</string>

    <!-- button -->
    <string name="skip_button">건너뛰기</string>
    <string name="next_button">다음</string>
    <string name="recommend_post_button">추천글 작성하기</string>
    <string name="go_song_button">노래 전체 들으러 가기</string>
    <string name="go_home_button">홈으로 가기</string>

    <!-- recommend -->
    <string name="post_list_title_default">추천글 보기</string>
    <string name="post_list_title_my">나의 추천글 보기</string>
    <string name="post_list_title_saved">저장한 추천글 보기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>