<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#28292F">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_category_question"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="4dp"/> <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_category_1"
            style="@style/CustomButtonStyle"
            android:layout_weight="1"
            android:text="@string/song_category_button1" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_category_2"
            style="@style/CustomButtonStyle"
            android:layout_weight="1"
            android:text="@string/song_category_button2" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_category_3"
            style="@style/CustomButtonStyle"
            android:layout_weight="1"
            android:text="@string/song_category_button3" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"> <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_category_4"
            style="@style/CustomButtonStyle"
            android:layout_weight="1"
            android:text="@string/song_category_button4" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_5"
                style="@style/CustomButtonStyle"
                android:layout_weight="1"
                android:text="@string/song_category_button5" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_6"
                style="@style/CustomButtonStyle"
                android:layout_weight="1"
                android:text="@string/song_category_button6" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_category_direct"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="4dp" android:background="@drawable/bg_write_dark_input"
            android:hint="직접 작성하기"
            android:paddingHorizontal="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#626C75"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_scene_question"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scene_1"
                style="@style/CustomButtonStyle"
                android:layout_weight="1"
                android:text="@string/song_scene_button1" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scene_2"
                style="@style/CustomButtonStyle"
                android:layout_weight="1"
                android:text="@string/song_scene_button2" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scene_3"
                style="@style/CustomButtonStyle"
                android:layout_weight="1"
                android:text="@string/song_scene_button3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scene_4"
                style="@style/CustomButtonStyle"
                android:layout_weight="1"
                android:text="@string/song_scene_button4" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scene_5"
                style="@style/CustomButtonStyle"
                android:layout_weight="1"
                android:text="@string/song_scene_button5" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scene_6"
                style="@style/CustomButtonStyle"
                android:layout_weight="1"
                android:text="@string/song_scene_button6" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_scene_direct"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="4dp" android:background="@drawable/bg_write_dark_input"
            android:hint="직접 작성하기"
            android:paddingHorizontal="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#626C75"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_category_next"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_round_selector"
            android:enabled="false"
            android:text="@string/next_button"
            android:textColor="@color/btn_text_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"/>
    </LinearLayout>
</LinearLayout>