<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/neutral_100">

    <!-- 스켈레톤 레이아웃 -->
    <View
        android:id="@+id/skeleton_nickname"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:background="@color/neutral_300"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"/>

    <View
        android:id="@+id/skeleton_thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/neutral_300"
        app:layout_constraintTop_toBottomOf="@+id/skeleton_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        android:layout_marginTop="12dp"/>

    <View
        android:id="@+id/skeleton_title"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:background="@color/neutral_300"
        app:layout_constraintTop_toBottomOf="@id/skeleton_thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>

    <View
        android:id="@+id/skeleton_artist"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:background="@color/neutral_300"
        app:layout_constraintTop_toBottomOf="@id/skeleton_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:text="##님을 위한 노래입니다"
        android:textColor="@color/neutral_900"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/tv_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_song_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/neutral_900"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#A0A0A0"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_song_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_write_recommend"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/primary_500"
        app:backgroundTint="@null"
        android:text="@string/recommend_post_button"
        android:textColor="@color/neutral_900"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_artist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 노래 전체 들으러 가기 버튼 -->
    <Button
        android:id="@+id/btn_listen_full"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/primary_500"
        android:text="@string/go_song_button"
        android:textColor="@color/neutral_900"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_write_recommend" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_round_selector"
        android:text="@string/go_home_button"
        android:textColor="@color/btn_text_selector"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>